# horizon-hpe-storage-ui

./: .gitignore  MANIFEST.in  README.rst  convert_os_name.py  requirements.txt  setup.cfg  setup.py
devstack/: plugin.sh  settings
horizon-ssmc-link/api/: barbican_api.py  cinder_api.py  hp_ssmc_api.py
horizon-ssmc-link/api/barbicanClient/: http.py
horizon-ssmc-link/api/hpSSMCclient/: http.py
horizon-ssmc-link/enabled/: _110_ssmc_link_admin_panel.py
horizon-ssmc-link/storage_panel/templates/: _edit_endpoint.html  index.html
horizon_hpe_storage/: __init__.py  overrides.py
horizon_hpe_storage/api/: barbican_api.py  cinder_api.py  hp_ssmc_api.py  keystone_api.py
horizon_hpe_storage/api/barbicanClient/: http.py
horizon_hpe_storage/api/cinderClient/: client.py  http.py
horizon_hpe_storage/api/common/: http.py  http_v2.py
horizon_hpe_storage/api/hpSSMCclient/: client.py  http.py
horizon_hpe_storage/api/keystoneClient/: client.py  http.py
horizon_hpe_storage/enabled/: _999_hpe_storage_admin_panel.py
horizon_hpe_storage/storage_panel/: panel.py  tabs.py  urls.py  version.py  views.py
horizon_hpe_storage/storage_panel/backend_systems/: capability_tables.py  license_tables.py  tables.py  tabs.py  urls.py  views.py
horizon_hpe_storage/storage_panel/config/: forms.py  tables.py  urls.py  views.py
horizon_hpe_storage/storage_panel/diags/: forms.py  tables.py  tabs.py  test_results_tables.py  urls.py  views.py
horizon_hpe_storage/storage_panel/endpoints/: forms.py  tables.py  urls.py  views.py
horizon_hpe_storage/storage_panel/lun_tool/: diff_tables.py  forms.py  tables.py  tabs.py  urls.py  views.py  volume_path_tables.py
horizon_hpe_storage/storage_panel/overview/: panel.py  tables.py  urls.py  views.py
horizon_hpe_storage/storage_panel/storage_arrays/: capability_tables.py  license_tables.py  openstack_features_tables.py  sched_stat_tables.py  tables.py  tabs.py  urls.py  views.py
horizon_hpe_storage/test_engine/: node_test.py
horizon_ssmc_link/: overrides.py
horizon_ssmc_link/api/: barbican_api.py  cinder_api.py  hp_ssmc_api.py  keystone_api.py
horizon_ssmc_link/enabled/: _110_ssmc_link_admin_panel.py  _999_ssmc_link_admin_panel.py
horizon_ssmc_link/storage_panel/: __init__.py  forms.py  panel.py  tables.py  tabs.py  urls.py  version.py  views.py
ssmc_link_ui/: forms.py  overrides.py  panel.py  tables.py  urls.py  views.py
ssmc_link_ui/api/: barbican_api.py  cinder_api.py  hp_ssmc_api.py  keystone_api.py
ssmc_link_ui/enabled/: _110_ssmc_link_admin_panel.py
ssmc_link_ui/storage_panel/: forms.py  tables.py  tabs.py  urls.py  views.py
ssmc_link_ui/templates/: _create_endpoint.html  _link_and_launch.html  index.html  link_and_launch.html
(+112 files in other folders)
