[metadata]
name = horizon-ssmc-link
version = 1.0.2
summary = Horizon to HP Storage Plug-in
description-file = README.rst
author = HP Storage Cloud Team
author-email = richard.hagarty@hp.com
home-page = https://github.com/hp-storage/horizon-ssmc-link
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    horizon_ssmc_link

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = horizon_ssmc_link/locale
domain = horizon_ssmc_link

[update_catalog]
domain = horizon_ssmc_link
output_dir = horizon_ssmc_link/locale
input_file = horizon_ssmc_link/locale/horizon_ssmc_link.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = horizon_ssmc_link/locale/horizon_ssmc_link.pot