[metadata]
name = horizon-hpe-storage-ui
summary = HPE Storage Plug-in for Horizon
description-file = README.rst
author = HPE Storage Cloud Team
author-email = richard.hagarty@hpe.com
home-page = https://github.com/hpe-storage/horizon-hpe-storage-ui
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    horizon_hpe_storage

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = horizon_hpe_storage/locale
domain = horizon_hpe_storage

[update_catalog]
domain = horizon_hpe_storage
output_dir = horizon_hpe_storage/locale
input_file = horizon_hpe_storage/locale/horizon_hpe_storage.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = horizon_hpe_storage/locale/horizon_hpe_storage.pot